[package]
name = "saro-infra"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_urlencoded = { workspace = true }
sea-orm = { workspace = true }
reqwest = { workspace = true }

dat = { workspace = true }
