[package]
name = "saro-infra"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
